# mcp

./: Cargo.toml  LICENSE  README.md  build.rs  marketplace.json  package.json
.github/workflows/: edge-release.yaml
docs/: README.md  agent-patterns.md  authentication.md  chains.md  cli-reference.md  concepts.md  cookbook.md  errors.md  quick-start.md  redis-streams.md  rest-api.md  subscriptions.md  webhooks.md
docs/frameworks/: README.md  claude-code.md  cline.md  codex-cli.md  continue.md  crewai.md  cursor.md  gemini-cli.md  google-adk.md  goose.md  langchain.md  mastra.md  openai-agents-sdk.md  vercel-ai-sdk.md  vs-code.md  windsurf.md  zed.md
docs/tools/: README.md  agent.md  alerts.md  inspect.md  portfolio.md  screen.md  search.md  trade.md
plugins/: claude.md  openclaw.md
plugins/claude/: .mcp.json
plugins/claude/.claude-plugin/: plugin.json
plugins/claude/skills/edge/: SKILL.md
plugins/openclaw/: SKILL.md
scripts/: download-binary.js  download-binary.mjs
src/: alerts.rs  error.rs  lib.rs  main.rs  manifest.rs  server.rs
src/app/: cli.rs  client.rs  handler.rs  mod.rs  runner.rs
src/client/: executor.rs  http_sse.rs  mod.rs  routes.rs  subscription.rs  trpc.rs
src/commands/: mod.rs
src/commands/key/: mod.rs  session_manager.rs
src/commands/key/filestore/: create.rs  delete.rs  derivation.rs  lock.rs  mod.rs  storage.rs  unlock.rs  update.rs
src/commands/key/filestore/auth/: mod.rs  passkey.rs  password.rs  types.rs
src/commands/key/filestore/crypto/: encryption.rs  mod.rs  types.rs
src/commands/key/keyring/: create.rs  delete.rs  lock.rs  mod.rs  unlock.rs  update.rs
src/commands/serve/: alerts.rs  mcp.rs
src/commands/wallet/: create.rs  delete.rs  import.rs  list.rs  mod.rs  name.rs  proof.rs
src/commands/wallet/game/: envelope_game.rs  game_state.rs  intents_game.rs  messages.rs  mod.rs  verification.rs
src/config/: mod.rs
src/domains/client/: mod.rs
src/manifest/: cache.rs  fetch.rs  inject.rs  manager.rs  mod.rs  tests.rs  types.rs
src/messages/: error.rs  mod.rs  prompt.rs  success.rs  warning.rs
src/orders/: mod.rs
src/server/: mcp.rs
src/session/: crypto.rs  filestore.rs  keyring.rs  mod.rs  transport.rs
src/state/: README.md  events.rs  mod.rs  server_config.rs
src/subscriptions/: alerts.rs  mod.rs
src/utils/: urls.rs
src/wallet/: api.rs  create.rs  import.rs  mod.rs  types.rs
