[package]
name = "poseidon"
version = "0.1.0"
edition = "2024"
authors = ["Edge Dot Trade <engineering@edge.trade>"]

[[bin]]
name = "edge"
path = "src/main.rs"

[features]
default = []
keyring-tests = []

[build-dependencies]
heck = { version = "0.5.0" }
prettyplease = { version = "0.2.37" }
proc-macro2 = { version = "1.0.106" }
quote = { version = "1.0.45" }
schemars = { version = "0.8.22" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
syn = { version = "2.0.117" }
typify = { version = "0.6.1" }
vergen-gitcl = { version = "9.1.0", features = [] }

[dev-dependencies]
async-trait = { version = "0.1.89" }
mockall = { version = "0.14.0" }
tempfile = { version = "3.27.0" }


[dependencies]
# internals
tyche-enclave = { path = "../tyche-enclave" }
erato = { path = "../erato" }

# externals
aes-gcm = { version = "0.10.3" }
axum = { version = "0.8.8" }
base64 = { version = "0.22.1" }
bs58 = { version = "0.5.1" }
chrono = { version = "0.4.44" }
clap = { version = "4.6.0", features = [
  "derive",
  "env",
  "unicode",
  "wrap_help",
] }
colored_json = { version = "5.0.0" }
dirs = { version = "6.0.0" }
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
futures = { version = "0.3.32" }
getrandom = { version = "0.4.2" }
hex = { version = "0.4.3" }
hkdf = { version = "0.12.4" }
hmac = { version = "0.12.1" }
html-escape = { version = "0.2.13" }
k256 = { version = "0.13.4", features = ["ecdsa"] }
keyring = { version = "3.6.3", features = [
  "apple-native",
  "crypto-rust",
  "linux-native-async-persistent",
  "windows-native",
] }
once_cell = { version = "1.21.4" }
pbkdf2 = { version = "0.12.2" }
rand = { version = "0.10.0" }
redis = { version = "1.1.0", default-features = false, features = [
  "tokio-rustls-comp",
] }
reqwest = { version = "0.13.2", default-features = false, features = [
  "json",
  "stream",
  "rustls-no-provider",
] }
ring = { version = "0.17.14" }
rpassword = { version = "7.4.0" }
rmcp = { version = "1.2.0", features = [
  "server",
  "macros",
  "transport-io",
  "transport-streamable-http-server",
] }
rustls = { version = "0.23.37", default-features = false, features = [
  "ring",
  "std",
  "tls12",
  "logging",
] }
schemars = { version = "1.2.1" }
serde_bytes = { version = "0.11.19" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
sha2 = { version = "0.10.9" }
sha3 = { version = "0.10.8" }
thiserror = { version = "2.0.18" }
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = { version = "0.7.18" }
toml = { version = "1.1.0" }
typify = { version = "0.6.1" }
tower = { version = "0.5.3" }
url = { version = "2.5.8" }
uuid = { version = "1.22.0", features = ["v4"] }
zeroize = { version = "1.8.2", features = ["derive"] }
